--- a/Message.html
+++ b/Message.html
@@ -7,28 +7,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Message.css">
-    <title>Document</title>
+    <title>Happy Birthday Khushi!!!</title>
 </head>
 <body>
     <div class="card">
 		<div class="imgBox">
 			<div class="bark"></div>
-			<img src="https://image.ibb.co/fYzTrb/lastofus.jpg">
+			<img class="front-img" src="Media/Khushi Card 2.png">
 		</div>
 		<div class="details">
-			<h4 class="color1">You're not a Fossil! (YET)</h2>
-			<h4 class="color2 margin">(HAPPY BIRTHDAY)</h3>
-			<p>Dear Dad,</p>
-			<p>Let's see.. .</p>
-			<p>You’re never around, you</p>
-			<p>hate the music I’m into, you</p>
-			<p>practically despise the movies I</p>
-			<p>like, and yet somehow you still</p>
-			<p>manage to be the best dad every year.</p>
-			<p>How do you do that? :)</p>
-			<p class="text-right">Happy Birthday, papa!</p>
-			<p class="text-right">♥Sarah</p>
+			<h4 class="color1">YOU ARE THE MOST AMAZING!!</h4>
+			<h4 class="color2 margin">HAPPIEST BIRTHDAY COO-SHIE</h4>
+			<p>When I say you're the embodiment of
+			amazingness, I'm not lying at all.
+			You've seen everything in the past 6 months and the worst is over.
+			I hope you only encounter yourself aka happiness from now on!<br>
+			<span class="text-left-align">And we're never gonna ignore the fact that you thought 30th February was a thing for 30 minutes straight.
+			Or that you tried to record sound with headphones on!</span>
+			</p>
+			<p class="text-right">Happy Birthday, Khushi!<br>♥Pande</p>
+			<!-- <p class="text-right">♥Pande</p> -->
 		</div>
 	</div>
+	<div class="button"><a href="Slideshow.html">Don't Kill Me Pls.</a></div>
 </body>
 </html>
