--- a/Message.html
+++ b/Message.html
@@ -3,6 +3,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,8 @@
     <title>Happy Birthday Khushi!!!</title>
 </head>
 <body>
-    <div class="card">
+	<div class="container">
+	<div class="card">
 		<div class="imgBox">
 			<div class="bark"></div>
 			<img class="front-img" src="Media/Khushi Card 2.png">
@@ -29,6 +31,8 @@
 			<!-- <p class="text-right">♥Pande</p> -->
 		</div>
 	</div>
-	<div class="button"><a href="Slideshow.html">Don't Kill Me Pls.</a></div>
+</div>
+<div class="button"><a href="Slideshow.html">Don't Kill Me Pls.</a></div>
+<div class="hover-txt"><p>HOVER OVER THE CARD!</p></div>
 </body>
 </html>
