--- a/Slideshow.html
+++ b/Slideshow.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css' rel='stylesheet' type='text/css'>
+    <title>Happy Birthday Khushi!!!</title>
+    <link rel="stylesheet" href="Slideshow.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" defer></script>
+    <script src="Slideshow.js" defer></script>
 </head>
 <body>
-    NOthing to see here
+    <div id="image1" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/Happy%20Birthday%20slide%201.png"><span class="multiline"></div>
+<div id="image2" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/Happy%20Birthday%202nd%20slide.png"></div>
+<div id="image3" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/Happy%20Birthday%20slide%203.png"></div>
+<div id="image4" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/Happy%20Birthday%204th%20slide.png"></div>
+<div id="image5" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/Happy%20Birthday%205th%20slide.png"></div>
+<div id="image6" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/6.png"></div>
+<div id="image7" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/7.png"></div>
+<div id="image8" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/8.png"></div>
+<div id="image9" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/9.png"></div>
+<div id="image10" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/10.png"></div>
+<div id="image11" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/11.png"><span class="frame"><button class="button"><a href="Your-stuff.html"><span>LOVELOVE STUFF!!!!</span></a></button></span></div>
 </body>
 </html>
+
