--- a/Your-stuff.html
+++ b/Your-stuff.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="http://lesscss.googlecode.com/files/less-1.0.30.min.js" async></script>
     <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="Your-stuff.css"/>
@@ -17,7 +18,7 @@
     <section class="container">
         <div class="page-header">
             <h1>WE LOVE YOU A LOT!!!!<br>
-                <small>YOU ARE AMAZINGGGG...</small></h1>
+                <small>YOU ARE AMAZINGGGG</small></h1>
                 <button class="button"><a href="page-5.html"><span>FINALE</span></a></button>
         </div>
         <div class="row active-with-click">
@@ -47,18 +48,19 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Pink">
                     <h2>
-                        <span>Sean Penn</span>
+                        <span>Palak Sahu</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
-                            Mystic River
+                            Hermione Granger
                         </strong>
                     </h2>
                     <div class="mc-content">
                         <div class="img-container">
-                            <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-sean-penn.jpg">
+                            <img class="img-responsive" src="Media\pg-4\Palak Sahu.jpeg">
                         </div>
                         <div class="mc-description">
-                            He has won two Academy Awards, for his roles in the mystery drama Mystic River (2003) and the biopic Milk (2008). Penn began his acting career in television with a brief appearance in a 1974 episode of Little House on the Prairie ...
+                            Oye sun happy birthday!!!!....it all started from type B from being in the same section to the same group to doing group projects together to hostel floor mates to walking together and then turning into friends you are 
+                            one of your kind Khushi...keep reading, keep shinning, keep achieving new greater heights of success and you are amazing🤩
                         </div>
                     </div>
                     <a class="mc-btn-action">
@@ -93,18 +95,18 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Deep-Purple">
                     <h2>
-                        <span>Dustin Hoffman</span>
+                        <span>Parijat Kasbekar</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
-                            Kramer vs. Kramer
+                            Mushy Khushi
                         </strong>
                     </h2>
                     <div class="mc-content">
                         <div class="img-container">
-                            <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-dustin-hoffman.jpg">
+                            <img class="img-responsive" src="Media/pg-4/Parijat Kasbekar.jpeg">
                         </div>
                         <div class="mc-description">
-                            He has been known for his versatile portrayals of antiheroes and vulnerable characters.[3] He won the Academy Award for Kramer vs. Kramer in 1979 ...
+                            Happiest Birthday Khushi! Hoping to get to know you better by having more awkwardly fun conversations with you. Eat loads of pizzas and send some for us!
                         </div>
                     </div>
                     <a class="mc-btn-action">
