--- a/Your-stuff.html
+++ b/Your-stuff.html
@@ -25,7 +25,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Red">
                     <h2>
-                        <span>Christopher Walken</span>
+                        <span>Gunjeev/Ayaz</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
                             The Deer Hunter
@@ -72,18 +72,26 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Purple">
                     <h2>
-                        <span>Clint Eastwood</span>
+                        <span>Manav Chillar</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
-                            Million Dollar Baby
+                            Kofuku
                         </strong>
                     </h2>
                     <div class="mc-content">
                         <div class="img-container">
-                            <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-clint-eastwood.jpg">
+                            <img class="img-responsive" src="Media/pg-4/Manav Chillar.jpeg">
                         </div>
                         <div class="mc-description">
-                            He rose to international fame with his role as the Man with No Name in Sergio Leone's Dollars trilogy of spaghetti Westerns during the 1960s ...
+                            hey 幸福 !
+                            Happy 19th Birthday 🖤
+                            you are soo book smart but sometimes life dumb (hehe ) 
+                            and ya I was jk, I can kidnap u bass petrol bharwadiyo 😔
+                            kyuki mai hun bht gareeb.
+                            we can go to bora bora but I pora pora🤴🏻 
+                            and well I would like to know more about u. College mai milke dekhte ye toh
+                            enjoi ur day 
+                            next year u will be 2 decades old <a href="https://bit.ly/3zJOoXk" target="_blank">Let that sink in (Click)</a>
                         </div>
                     </div>
                     <a class="mc-btn-action">
@@ -118,18 +126,18 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Indigo">
                     <h2>
-                        <span>Edward Norton</span>
+                        <span>Karam Arora</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
-                            American History X
+                            The Different One
                         </strong>
                     </h2>
                     <div class="mc-content">
                         <div class="img-container">
-                            <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-edward-norton.jpg">
+                            <img class="img-responsive" src="Media/pg-4/Karam Arora.jpeg">
                         </div>
                         <div class="mc-description">
-                            He has been nominated for three Academy Awards for his work in the films Primal Fear, American History X and Birdman. He also starred in other roles ...
+                            Hey there khushi, hope you are in good spirits in this pandemic A very happy birthday to you if the college was not closed down there would have been no need for a wish like this just a direct surprise, lastly I hope you enjoy your day and looking forward to meet you in college soon✌️.
                         </div>
                     </div>
                     <a class="mc-btn-action">
@@ -141,7 +149,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Blue">
                     <h2>
-                        <span>Michael Caine</span>
+                        <span>Maitri</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
                             Educated Rita
@@ -164,7 +172,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Light-Blue">
                     <h2>
-                        <span>Harvey Keitel</span>
+                        <span>Gaytri</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
                             Pulp Fiction
@@ -187,7 +195,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Cyan">
                     <h2>
-                        <span>Jack Nicholson</span>
+                        <span>Webz</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
                             The Shining
@@ -210,18 +218,18 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Teal">
                     <h2>
-                        <span>Jeff Bridges</span>
+                        <span>Madhvi</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
-                            The Big Lebowski
+                            Coo-shie
                         </strong>
                     </h2>
                     <div class="mc-content">
                         <div class="img-container">
-                            <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-jeff-bridges.jpg">
+                            <img class="img-responsive" src="Media/pg-4/Madhvi Kankran.jpeg">
                         </div>
                         <div class="mc-description">
-                            He comes from a well-known acting family and began his televised acting in 1958 as a child with his father, Lloyd Bridges, and brother, Beau, on television's Sea Hunt ...
+                            You mean a lot to pp so obviously you mean a lot to me as well. Happy Birthday Khushi, wishing you abundance of happiness.
                         </div>
                     </div>
                     <a class="mc-btn-action">
@@ -233,7 +241,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Green">
                     <h2>
-                        <span>Joaquin Phoenix</span>
+                        <span>Sarthak Malik</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
                             Her
@@ -256,7 +264,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Light-Green">
                     <h2>
-                        <span>Tom Hanks</span>
+                        <span>Gunjeev/Ayaz</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
                             Forrest Gump
@@ -279,7 +287,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Lime">
                     <h2>
-                        <span>Philip Seymour Hoffman</span>
+                        <span>Aachman</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
                             25th Hour
@@ -300,20 +308,20 @@
                 </article>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12">
-                <article class="material-card Yellow">
+                <article class="material-card Amber">
                     <h2>
-                        <span>Paul Newman</span>
+                        <span>&nbsp;</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
-                            The Color of Money
+                            Color Pencil
                         </strong>
                     </h2>
                     <div class="mc-content">
                         <div class="img-container">
-                            <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-paul-newman.jpg">
+                            <img class="img-responsive" src="Media/pg-4/Ishaan.jpg">
                         </div>
                         <div class="mc-description">
-                            He won numerous awards, including an Academy Award for his performance in the 1986 film The Color of Money,[3] a BAFTA Award, a Screen Actors Guild Award, a Cannes Film Festival Award, an Emmy Award ...
+                            that one time you posted "the transience to a blur gets to me" is, no exaggeration, the most memorable concept stuck in my head and will always be. i wish i was as artistic as you are
                         </div>
                     </div>
                     <a class="mc-btn-action">
@@ -323,9 +331,9 @@
                 </article>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12">
-                <article class="material-card Amber">
+                <article class="material-card Orange">
                     <h2>
-                        <span>Marlon Brando</span>
+                        <span>Pritika</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
                             The Godfather
@@ -346,9 +354,9 @@
                 </article>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12">
-                <article class="material-card Orange">
+                <article class="material-card Deep-Orange">
                     <h2>
-                        <span>Kevin Spacey</span>
+                        <span>Preet</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
                             American Beauty
@@ -369,7 +377,7 @@
                 </article>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12">
-                <article class="material-card Deep-Orange">
+                <article class="material-card Yellow">
                     <h2>
                         <span>Robert De Niro</span>
                         <strong>
