--- a/Your-stuff.html
+++ b/Your-stuff.html
@@ -103,7 +103,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Deep-Purple">
                     <h2>
-                        <span>Parijat Kasbekar</span>
+                        <span>Gunjeev</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
                             Mushy Khushi
@@ -111,7 +111,7 @@
                     </h2>
                     <div class="mc-content">
                         <div class="img-container">
-                            <img class="img-responsive" src="Media/pg-4/Parijat Kasbekar.jpeg">
+                            <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-joaquin-phoenix.jpg">
                         </div>
                         <div class="mc-description">
                             Happiest Birthday Khushi! Hoping to get to know you better by having more awkwardly fun conversations with you. Eat loads of pizzas and send some for us!
@@ -264,18 +264,18 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Light-Green">
                     <h2>
-                        <span>Gunjeev/Ayaz</span>
+                        <span>Parijat</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
-                            Forrest Gump
+                            Mushy Khushi
                         </strong>
                     </h2>
                     <div class="mc-content">
                         <div class="img-container">
-                            <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-tom-hanks.jpg">
+                            <img class="img-responsive" src="Media/pg-4/Parijat Kasbekar.jpeg">
                         </div>
                         <div class="mc-description">
-                            He is known for his roles in Big (1988), Philadelphia (1993), Forrest Gump (1994), Apollo 13 (1995), Saving Private Ryan, You've Got Mail (both 1998), The Green Mile (1999), Cast Away (2000) ...
+                            Happiest Birthday Khushi! Hoping to get to know you better by having more awkwardly fun conversations with you. Eat loads of pizzas and send some for us!
                         </div>
                     </div>
                     <a class="mc-btn-action">
