--- a/Slideshow.html
+++ b/Slideshow.html
@@ -11,7 +11,7 @@
     <script src="Slideshow.js" defer></script>
 </head>
 <body>
-    <div id="image1" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/Happy%20Birthday%20slide%201.png"><span class="multiline"></div>
+    <div id="image1" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/Happy%20Birthday%20slide%201.png"></div>
 <div id="image2" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/Happy%20Birthday%202nd%20slide.png"></div>
 <div id="image3" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/Happy%20Birthday%20slide%203.png"></div>
 <div id="image4" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/Happy%20Birthday%204th%20slide.png"></div>
