--- a/Your-stuff.html
+++ b/Your-stuff.html
@@ -25,7 +25,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Red">
                     <h2>
-                        <span>Gunjeev/Ayaz</span>
+                        <span> Ayaz</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
                             The Deer Hunter
@@ -33,7 +33,7 @@
                     </h2>
                     <div class="mc-content">
                         <div class="img-container">
-                            <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-christopher-walken.jpg">
+                            <img class="img-responsive" src="Media/pg-4/Ayaz.jpg">
                         </div>
                         <div class="mc-description">
                             He has appeared in more than 100 films and television shows, including The Deer Hunter, Annie Hall, The Prophecy trilogy, The Dogs of War is a great source of actions.
@@ -48,7 +48,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Pink">
                     <h2>
-                        <span>Palak Sahu</span>
+                        <span>Palak</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
                             Hermione Granger
@@ -72,7 +72,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Purple">
                     <h2>
-                        <span>Manav Chillar</span>
+                        <span>Manav</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
                             Kofuku
@@ -106,15 +106,18 @@
                         <span>Gunjeev</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
-                            Mushy Khushi
+                            Nickname
                         </strong>
                     </h2>
                     <div class="mc-content">
                         <div class="img-container">
-                            <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-joaquin-phoenix.jpg">
+                            <img class="img-responsive" src="Media/pg-4/Gunjeev.jpeg">
                         </div>
-                        <div class="mc-description">
-                            Happiest Birthday Khushi! Hoping to get to know you better by having more awkwardly fun conversations with you. Eat loads of pizzas and send some for us!
+                        <div class="mc-description gaygay">
+                            Happiest Birthday Khushi! Hi, new place to read birthday wishes being explored by both of us? But yes, idk how much space I have right now so yeah, will keep it short.
+                            You’re the nicest, sweetest and the MOST caring person i’ve ever come across in my life.
+                            Remember we were talking about how we are always us? I’m just super delighted by the fact that we are always us. it’s just something I can’t afford to lose. And i’m pretty confident that i won’t.
+                            So yes, Happiest Birthday, i love you.
                         </div>
                     </div>
                     <a class="mc-btn-action">
@@ -126,7 +129,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Indigo">
                     <h2>
-                        <span>Karam Arora</span>
+                        <span>Karam</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
                             The Different One
@@ -152,15 +155,15 @@
                         <span>Maitri</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
-                            Educated Rita
+                            Mohali Sector 79 Wali
                         </strong>
                     </h2>
                     <div class="mc-content">
                         <div class="img-container">
-                            <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-michael-caine.jpg">
+                            <img class="img-responsive" src="Media/pg-4/Maitri.jpg">
                         </div>
-                        <div class="mc-description">
-                            English actor and author. Renowned for his distinctive working class cockney accent, Caine has appeared in over 115 films and is regarded as a British ...
+                        <div class="mc-description gaygay">
+                            Happy nineteenth khushi, or mohali sector 79 wali, the most convenient way to identify that someone’s referring to khushi sharma 😝😝 back to when i first met you, i supposed you to be a girl full of attitude bcz you ignored me the first time i approached you for notes to this time, when i can share my worries and joys with you, without you judging me at all 🥺🥺 i always loved your lunch more than mine and thankyou for sharing it with me everytime 😆😆 mf lakshya gave me nothing but a girl friend who knows the best way to maintain relations with anybody and everybody she becomes a part of life of. I really wished i was there with you today to celebrate you but will meet you super soon with a great present ofc. I love you infinitely. Your Maytree ☹️
                         </div>
                     </div>
                     <a class="mc-btn-action">
@@ -180,10 +183,10 @@
                     </h2>
                     <div class="mc-content">
                         <div class="img-container">
-                            <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-harvey-keitel.jpg">
+                            <img class="img-responsive" src="Media/pg-4/Gaytri Sran.jpeg">
                         </div>
-                        <div class="mc-description">
-                            Some of his most notable starring roles were in Martin Scorsese's Mean Streets and Taxi Driver, Ridley Scott's The Duellists and Thelma & Louise, Quentin Tarantino ...
+                        <div class="mc-description gaygay">
+                            Oh hey! I still remember that day when you turned on your camera in eco class on your first day and we planned to add you in our IoT group and kick out the other group member coz OG Khushi’s doppelgänger😂. Since that day we had numerous video calls, birthday calls, morning walks and unforgettable moments where one us was at dumbness 100/10 level (only you and Vaibhav thou heh), from having lunch in corridor to attending meeting in my hostel room it was a great. Also also also that song you you dedicated on my birthday, that was quite spontaneous but demn I loved that song🥺. Love you. HAPPY BIRTHDAYYY and I hope you’ll enjoy your projects with all K K South Indians😂
                         </div>
                     </div>
                     <a class="mc-btn-action">
@@ -198,12 +201,12 @@
                         <span>Webz</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
-                            The Shining
+                            Mom
                         </strong>
                     </h2>
                     <div class="mc-content">
                         <div class="img-container">
-                            <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-jack-nicholson.jpg">
+                            <img class="img-responsive" src="Media/pg-4/Webz.jpeg">
                         </div>
                         <div class="mc-description">
                             Throughout his career, Nicholson has portrayed unique and challenging roles, many of which include dark portrayals of excitable, neurotic and psychopathic characters ...
@@ -241,18 +244,20 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Green">
                     <h2>
-                        <span>Sarthak Malik</span>
+                        <span>Sarthak</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
-                            Her
+                            Womanman
                         </strong>
                     </h2>
                     <div class="mc-content">
                         <div class="img-container">
-                            <img class="img-responsive" src="https://material-cards.s3-eu-west-1.amazonaws.com/thumb-joaquin-phoenix.jpg">
+                            <img class="img-responsive" src="Media/pg-4/Sarthak.jpg">
                         </div>
-                        <div class="mc-description">
-                            is an American actor, producer, music video director, musician and activist. For his work as an artist, Phoenix has received a Grammy Award, a Golden Globe Award and three Academy ...
+                        <div class="mc-description gaygay">
+                            hello womanman, happy birthday
+let me start off by saying that I'm proud of u for a lot of things that you've done in the last 6 months (ykwim). Thank you for making me believe that nu can occasionally house cool people, even a connotation of dory ( fROm fInDInG dOrY) at times. I'm glad i chose u for nanoepl, honestly wouldn't have done it without you my g😩
+looking forward to your next rant, i always derive ironic pleasure from u talking about the tantalizing realities of the world. thnku4exist, now go ahead and say thank you in broken-texts
                         </div>
                     </div>
                     <a class="mc-btn-action">
@@ -285,7 +290,7 @@
                 </article>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12">
-                <article class="material-card Lime">
+                <article class="material-card Orange">
                     <h2>
                         <span>Aachman</span>
                         <strong>
@@ -330,7 +335,7 @@
                     <div class="mc-footer"></div>
                 </article>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-12">
+            <!-- <div class="col-md-4 col-sm-6 col-xs-12">
                 <article class="material-card Orange">
                     <h2>
                         <span>Pritika</span>
@@ -469,7 +474,7 @@
                     <div class="mc-footer"></div>
                     
                 </article>
-            </div>
+            </div> -->
         </div>
     </section>
     
