--- a/Slideshow.html
+++ b/Slideshow.html
@@ -21,7 +21,7 @@
 <div id="image8" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/8.png"></div>
 <div id="image9" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/9.png"></div>
 <div id="image10" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/10.png"></div>
-<div id="image11" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/11.png"><span class="frame"><button class="button"><a href="Your-stuff.html"><span>LOVELOVE STUFF!!!!</span></a></button></span></div>
+<div id="image11" class="img" data-img="https://raw.githubusercontent.com/Jrap-bit/Khushi-Birthday-2021/main/Media/11.png"><span class="frame"><a href="Your-stuff.html"><button class="button"><span>LOVELOVE STUFF!!!!</span></button></a></span></div>
 </body>
 </html>
 
