--- a/Your-stuff.html
+++ b/Your-stuff.html
@@ -27,15 +27,23 @@
                         <span> Ayaz</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
-                            The Deer Hunter
+                            qt
                         </strong>
                     </h2>
                     <div class="mc-content">
                         <div class="img-container">
-                            <img class="img-responsive" src="Media/pg-4/Ayaz.jpg">
+                            <img class="img-responsive" src="Media/pg-4/Ayaz_2.jpg">
                         </div>
                         <div class="mc-description gaygay">
-                            He has appeared in more than 100 films and television shows, including The Deer Hunter, Annie Hall, The Prophecy trilogy, The Dogs of War is a great source of actions.
+                            Happy Birthday Khushi Sharma<br>
+                            to me known as my girl<br>
+                            now I could say alot of things<br>
+                            all of them true<br>
+                            but none of them would justify what you actually mean to me<br>
+                            I would rather have all the bad times with you, than have the good times with someone else.<br>
+                            I love you giniversously my qt ❤<br>
+                            Click Below Linkkk!!!<br>
+                            <a href="ayaz-photos.html" target="_blank">SPECIAL LOVELOVE!!</a>
                         </div>
                     </div>
                     <a class="mc-btn-action">
@@ -294,12 +302,12 @@ looking forward to your next rant, i always derive ironic pleasure from u talkin
                         <span>Aachman</span>
                         <strong>
                             <i class="fa fa-fw fa-star"></i>
-                            
+                            S-Cool Caption
                         </strong>
                     </h2>
                     <div class="mc-content">
                         <div class="img-container">
-                            <img class="img-responsive" src="Media/pg-4/Aachman.jpeg">
+                            <img class="img-responsive" src="Media/pg-4/Aachman.jpg">
                         </div>
                         <div class="mc-description gaygay">
                             Happy birthday Khushi.
@@ -479,8 +487,11 @@ Baaki all the best, here's to hopefully a great year ahead, happy birthday.
                 </article>
             </div> -->
         </div>
-        <a href="page-5.html"><button id="button" class="button"><span>FINALE</span></button></a>
     </section>
-    
+    <section>
+        <div>
+            <a href="page-5.html"><button id="button" class="button"><span>FINALE</span></button></a>
+        </div>
+    </section>  
 </body>
 </html>
